fix nav issues on mobile

--- a/style.css
+++ b/style.css
@@ -23,11 +23,13 @@ html {
     font-size: 16px;
     line-height: 1.4;
     scroll-behavior: smooth;
+    width: 100%;
 }
 
 body {
     background-color: var(--clr-primary);
     color: var(--clr-text-primary);
+    width: 100%;
 }
 
 h1, h2 {
@@ -837,5 +839,25 @@ footer {
     footer {
         grid-template-columns: 1fr;
         gap: 1rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    header {
+        justify-content: center;
+    }
+
+    header nav ul {
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .section-selector {
+        --gap: 5px;
+    }
+    .section-selector h2 {
+        font-size: 7vw;
+        padding: .25rem 1rem;
     }
 }
